# LearningITK

./: .gitignore  CMakeLists.txt
BSplineWarping1/: bsplineWarping1.cxx  comando.txt
BSplineWarping2/: bsplineWarping2.cxx  comando.txt
ChangeInfo/: ChangeInformationImageFilter.cxx
CirclesBspline/: comando.txt  exampleBSplineDeformable.cxx
Data/: brainweb1e1a10f20Transf.txt
DefReg12_8/: comando.txt  defReg12_8.cxx
DefReg12_8/resDefReg12/: dispField.mha  finalTransform.txt
DefReg13/: comando.txt  defReg13.cxx
DefReg14/: .defReg14.cxx.swp  comando.txt  defReg14.cxx  finalParams.txt
DefReg15/: .defReg15.cxx.swp  comando.txt  defReg15.cxx
DefReg4/: comando.txt  defReg4.cxx
TransfBSplineReadWrite/: comando.txt  transformReadWrite.cxx
TransfBSplineReadWrite/resultsTBRW/: transformAffBSpline.txt
